--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        <h1>
+            Cordel Moderno
+        </h1>
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+        </p>
     </header>
 
     <section class="normal">
@@ -41,6 +45,7 @@
             Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
+            Ou vai até no começo<br>
             Agora é .com <br>
             Se o saite é muito bom <br>
             Ele vale um alto preço.
@@ -68,27 +73,27 @@
             Nas linhas do coração.
         </p>
 
-    <section class="normal">
-        <p>
-            Agora, escrevo e envio <br>
-            Chegando na mesma hora <br>
-            Mas quando vou prosear <br>
-            A pessoa foi embora <br>
-            Abriu outro aplicativo <br>
-            O mundo ficou cativo <br>
-            Da tecnologia do agora.
-        </p>
-
-        <p>
-            Felizmente, pra orar <br>
-            Não precisa de internet <br>
-            Deus escuta todo mundo <br>
-            Se quiser, faça esse teste <br>
-            Dois pontos são dois joelhos <br>
-            Seus lábios são aparelhos <br>
-            Deixe que Deus interprete.
-        </p>
-    </section>
+        <section class="normal">
+            <p>
+                Agora, escrevo e envio <br>
+                Chegando na mesma hora <br>
+                Mas quando vou prosear <br>
+                A pessoa foi embora <br>
+                Abriu outro aplicativo <br>
+                O mundo ficou cativo <br>
+                Da tecnologia do agora.
+            </p>
+    
+            <p>
+                Felizmente, pra orar <br>
+                Não precisa de internet <br>
+                Deus escuta todo mundo <br>
+                Se quiser, faça esse teste <br>
+                Dois pontos são dois joelhos <br>
+                Seus lábios são aparelhos <br>
+                Deixe que Deus interprete.
+            </p>
+        </section>
 
     <footer>
         <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
